--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,5 @@ matplotlib==3.7.2
 seaborn==0.12.2
 scikit-learn==1.3.0
 scipy==1.11.1
-spacy>=3.0.0,<4.0.0   
-textblob==0.15.3   
-wordcloud==1.8.1  
+wordcloud
 jupyter
